-
Bug
-
Resolution: Done
-
P2: Important
-
4.8.1, 4.8.2, 4.8.3
-
None
-
MacOs, xcode
-
eb2d0c82eb8842713f897c0de8c960d07e62df7d (5.0.1) acfd489fb344d53463525c7b390cce7381f67b80 (4.8.5)
The qmake variable OBJECTS_DIR seems to be ignored since Qt 4.8.1 (worked in 4.8.0), when creating an xcode project.
Example:
OBJECTS_DIR is defined like this in the .pro
DGI_BASE_PATH = ../../..
DGI_OUTPUT_PATH = $$DGI_BASE_PATH/Output/Debug
OBJECTS_DIR = $$DGI_OUTPUT_PATH/Intermediate
When compiling I used to get:
-I/DevMac/BranchName/DGI/Projects/MacOS/Xcode/../../../Output/Debug/Intermediate/DGI.build/Debug/DGI.build/DGI.hmap
Now I have:
-I/DevMac/BranchName/DGI/Projects/MacOS/Xcode/build/DGI.build/Debug/DGI.build/DGI.hmap
This causes compiling problems with objects defined in an other project.