Respect the OBJECTS_DIR setting for XCode projects

Task-number: QTBUG-28104
Change-Id: I0361cb979c40ce14ac163453d8229efc69527b6c
Reviewed-by: Oswald Buddenhagen <oswald.buddenhagen@digia.com>
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@digia.com>
Reviewed-by: Joerg Bornemann <joerg.bornemann@digia.com>
(cherry picked from qtbase/eb2d0c82eb8842713f897c0de8c960d07e62df7d)